# OpenSyncedLists

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT_STATUS.md  Makefile  README.md
.gitlab/issue_templates/: bug-report.md  new-feature.md  update.md
.gitlab/merge_request_templates/: bug-fix.md  new-feature.md  update.md
Android_Client/OpenSyncedLists/: build.gradle  settings.gradle
Android_Client/OpenSyncedLists/app/: build.gradle
Android_Client/OpenSyncedLists/app/release/: app-release.aab  app-release.apk  output-metadata.json
Android_Client/OpenSyncedLists/app/src/main/: AndroidManifest.xml
Android_Client/OpenSyncedLists/gradle/wrapper/: gradle-wrapper.properties
Android_Client/OpenSyncedLists/scripts/: build.sh
Assets/: Preview_1.xcf  bottom_arrow.xcf  bottom_arrow_white.xcf  down_arrow.xcf  down_arrow_white.xcf  icon.xcf  top_arrow.xcf  top_arrow_white.xcf  up_arrow.xcf  up_arrow_white.xcf
Assets/Screenshots/: Preview_1.xcf
Express_Server/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tslint.json
Express_Server/src/: app.ts
Express_Server/src/route/: list.ts
Express_Server/src/util/storage/: db-gateway.ts  mongodb-gateway.ts
Express_Server/src/util/structures/: list.ts
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt
fastlane/metadata/android/de-DE/changelogs/: 14.txt  15.txt  default.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 10.txt  11.txt  12.txt  14.txt  7.txt  8.txt  9.txt  default.txt
fastlane/metadata/android/es-ES/: full_description.txt  short_description.txt
fastlane/metadata/android/fr-FR/: full_description.txt  short_description.txt
fastlane/metadata/android/pt-BR/: full_description.txt  short_description.txt
metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
metadata/android/en-US/changelogs/: 010003.txt  010004.txt
opensyncedlists-crossplattform/: Cargo.toml  Dioxus.toml  build.rs  index.html
opensyncedlists-crossplattform/scripts/: build_desktop.sh  build_web.sh
opensyncedlists-crossplattform/src/: app_state.rs  lib.rs  main.rs
opensyncedlists-crossplattform/src/data/: action.rs  element.rs  header.rs  list.rs  mod.rs  step.rs  tag.rs
opensyncedlists-crossplattform/src/storage/: file_storage.rs  mod.rs  secure_storage.rs
opensyncedlists-crossplattform/src/sync/: mod.rs  server.rs
opensyncedlists-crossplattform/src/ui/: app.rs  mod.rs
opensyncedlists-crossplattform/src/ui/components/: list_selector.rs  mod.rs
opensyncedlists-crossplattform/web/: index.html
screenshots/: generate.sh
(+122 files in other folders)
