[package]
name = "opensyncedlists"
version = "0.1.0"
edition = "2021"
authors = ["Etienne Schmidt <eschmidt@schmidt-ti.eu>"]
license = "GPL-3.0-or-later"
description = "Cross-platform synced lists application using Dioxus"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies for all platforms
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
anyhow = "1.0"
log = "0.4"

# Conditional feature-based dependencies
dioxus = { version = "0.6", default-features = false }
dioxus-signals = { version = "0.6", optional = true }

# Platform-specific feature groups
[features]
default = ["desktop"]
desktop = ["dioxus/desktop", "dioxus/macro", "dioxus/hooks", "dioxus/html", "dioxus/launch", "dep:tokio", "dep:uuid", "dep:getrandom", "dep:reqwest", "dep:dioxus-signals"]
web = ["dioxus/web", "dioxus/macro", "dioxus/hooks", "dioxus/html", "dioxus/launch", "dep:wasm-bindgen", "dep:console_error_panic_hook", "dep:wasm-logger", "dep:web-sys", "dep:reqwest", "dep:uuid", "dep:getrandom", "dep:dioxus-signals"]

# Desktop-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "time"], optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
getrandom = { version = "0.2", optional = true }

# WASM-only dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"], optional = true }
uuid = { version = "1.0", features = ["v4", "js"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
wasm-logger = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["Window", "Storage"], optional = true }


[[bin]]
name = "opensyncedlists"
path = "src/main.rs"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
